--- a/index.html
+++ b/index.html
@@ -1,100 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-HK">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>正语日新标 v5.1 转换器</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Sans+TC:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['"Roboto"', '"Noto Sans TC"', '"Noto Sans JP"', 'sans-serif'],
-              jp: ['"Noto Sans JP"', 'sans-serif'],
-            },
-            colors: {
-              dl: {
-                bg: '#F3F5F7', // DeepL Page Background (Light)
-                surface: '#FFFFFF', // Input Background (Light)
-                output: '#F7F8FA', // Output Background (Light)
-                border: '#E3E5E8', // Subtle Borders (Light)
-                text: '#0F2B46', // Deep Navy Text (Light)
-                textSec: '#64748B', // Secondary Text (Light)
-                primary: '#0F2B46', // Deep Teal/Navy Branding
-                accent: '#006A6A', // The original Teal for highlights
-                hover: '#F1F3F6',
-                
-                // Dark Mode Colors (Slate/Navy based)
-                dark: {
-                  bg: '#0f172a', // Slate 900
-                  surface: '#1e293b', // Slate 800
-                  output: '#1e293b', // Slate 800 (Same as surface for unified look or slightly diff)
-                  border: '#334155', // Slate 700
-                  text: '#f1f5f9', // Slate 100
-                  textSec: '#94a3b8', // Slate 400
-                  hover: '#334155',
-                }
-              }
-            },
-            boxShadow: {
-              'card': '0 4px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px -1px rgba(0, 0, 0, 0.02)',
-              'float': '0 10px 15px -3px rgba(0, 0, 0, 0.05), 0 4px 6px -2px rgba(0, 0, 0, 0.025)',
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      body {
-        /* Default Light */
-        background-color: #F3F5F7;
-        color: #0F2B46;
-        transition: background-color 0.3s ease, color 0.3s ease;
-      }
-      /* Dark Mode Overrides applied via class on html/body */
-      .dark body {
-        background-color: #0f172a;
-        color: #f1f5f9;
-      }
-      
-      /* Custom Scrollbar for a cleaner look */
-      ::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: transparent; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #CBD5E1; 
-        border-radius: 3px;
-      }
-      .dark ::-webkit-scrollbar-thumb {
-        background: #475569;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #94A3B8; 
-      }
-    </style>
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
-  }
-}
-</script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>正语日新标v5.1 转换器</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Sans+TC:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
+
 </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
