feat: implement PWA functionality via vite-plugin-pwa, manifest, and new icon assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>南武正语转换器</title>
+  <title>南武正语翻译器 | Nambunese Translator</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="将中文转换为南武正语（粤语假名书写系统），遵循正语日新标标准。在线粤语假名转换工具。" />
+  <meta name="keywords" content="南武正语,粤语假名,正语日新标,粤拼转换,Cantonese Kana,Nambunese,语言转换器" />
+  <meta name="author" content="CJack" />
+  <link rel="canonical" href="https://translator.cjack.top" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://translator.cjack.top" />
+  <meta property="og:title" content="南武正语翻译器 | Nambunese Translator" />
+  <meta property="og:description" content="将中文转换为南武正语（虚构世界观粤语假名书写系统），遵循正语日新标标准。" />
+  <meta property="og:image" content="https://translator.cjack.top/icon-512x512.png" />
+  <meta property="og:locale" content="zh_HK" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="南武正语翻译器 | Nambunese Translator" />
+  <meta name="twitter:description" content="将中文转换为南武正语（虚构世界观粤语假名书写系统），遵循正语日新标标准。" />
+  <meta name="twitter:image" content="https://translator.cjack.top/icon-512x512.png" />
+
+  <!-- PWA & Theme -->
+  <meta name="theme-color" content="#0d9488" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="南武正语翻译器" />
+  <link rel="apple-touch-icon" href="/icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192x192.png" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
